fixed page refresh, new and deleted docs handling

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Document Assistant</title>
+    <meta http-equiv="refresh" content="5">
+
     <style>
         body {
             font-family: sans-serif;
